# istio-by-example

./: README.md  justfile
.github/workflows/: ci.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: __init__.py  main.py
ci/charts/backend/: Chart.yaml  values.yaml
ci/charts/backend/templates/: _helpers.tpl  deployment.yaml  service.yaml
ci/charts/frontend/: Chart.yaml  values.yaml
ci/charts/frontend/templates/: _helpers.tpl  deployment.yaml  service.yaml
frontend/: Dockerfile  pyproject.toml
frontend/frontend/: __init__.py  main.py
